# retinaface-wasm

./: .eslintrc.json  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  generate-file-sizes.js  generate-files-size.js  generate-headers.js  index.html  index.ts  package-lock.json  package.json  tsconfig.json
examples/: landmarks.ts  wechat.ts
lib/: main.cpp
models/: face_landmarker_param.txt  retinaface_mnet25_params.txt
src/: index.ts
wasm/: retinaface-basic.wasm  retinaface-chrome57.wasm  retinaface-simd.wasm
